# Sentinal

./: .gitignore  README.md  pyproject.toml
contracts/: __init__.py  events.py  models.py
contracts/schemas/: approval-package.schema.json  events.schema.json  incident-envelope.schema.json
docs/: architecture.md  demo-flow.md  pitch-outline.md
sentinel_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/orchestrator/: __init__.py  agents.py  app.py  config.py  engine.py  framework_adapters.py  state.py  telemetry.py
services/tools/: __init__.py  azure_monitor.py  ci_client.py  copilot_agent.py  github_client.py  synthetic_data.py
services/verification/: __init__.py  runner.py
storage/: __init__.py  pattern_store.py
tests/: test_api.py  test_pipeline.py
vscode-sentinel/: .vscodeignore  README.md  package-lock.json  package.json  sentinel-vscode-0.1.0.vsix
vscode-sentinel/media/: styles.css
vscode-sentinel/src/: extension.ts  statusBar.ts  types.ts
vscode-sentinel/src/api/: client.ts
vscode-sentinel/src/commands/: commands.ts
vscode-sentinel/src/diff/: diffProvider.ts  unifiedDiffParser.ts
vscode-sentinel/src/state/: incidentStore.ts
vscode-sentinel/src/views/: incidentDetailPanel.ts  incidentTreeProvider.ts  webviewProtocol.ts
vscode-sentinel/webview/: incident.html
